--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -98,6 +98,11 @@ collections:
     identifier_field: slug
     summary: "{{title}}"
     fields:
+      - label: "Gallery"
+        name: "galleryImages"
+        widget: "list"
+        summary: '{{fields.image}}'
+        field: {label: Image, name: image, widget: image}
       - label: "Code"
         name: "code"
         widget: "code"
